solucao paliativa para erro de cors